re ma page presentation en index

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "acceuil",
         "bienvenue",
+        "contactez",
         "fbook",
         "japon",
         "logofbook",
